--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                     </div>
                     <div id="lft-float" class="float-comment">
                         <div class="pixone" id="pic"></div>
-                        <h1><span >Savior </span> just<br>  purchased Thums-up</h1>
+                        <h1><span >Savior </span> loves<br> Thums-up</h1>
                         <div id="lock">
                             <i class="ri-lock-line"></i>
                         </div>
                     </div>
                     <div id="rght-float" class="float-comment">
                         <div class="pixtwo" id="pic"></div>
-                        <h1><span>Sid </span> disliked<br>this item</h1>
+                        <h1><span>Sid </span>disliked<br>this item</h1>
                         <div id="lock">
                             <i class="ri-heart-fill"></i>
                         </div>
